adicionando favicon na index

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="./css/groupSounds.css">
     <link rel="stylesheet" href="./css/groupTimer.css">
     <link rel="stylesheet" href="./css/index.css">
+    
+    <link rel="shortcut icon" href="./imgs/favicon.ico" type="image/x-icon">
 
     <script src="./js/index.js" type="module"></script>
 </head>
